@@ -1,3 +1,11 @@
+2002-05-20  Jorn Baayen  <jorn@nl.linux.org>
+
+	* src/nautilus-shell-ui.xml:
+	* src/nautilus-window-private.h:	
+	* src/nautilus-window-toolbars.c: always use the gtk stock
+	icons in toolbars, set the priority property for some buttons,
+	add history dropdown buttons, remove rightclick menu.
+
 2002-05-22  Eric Baudais  <baudais@okstate.edu>
 
 	* help/nautilus-user-manual/C/nautilus-user-manual-C.omf
